--- a/app/src/main/res/layout/layout_main_custom_toolbar.xml
+++ b/app/src/main/res/layout/layout_main_custom_toolbar.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RadioGroup
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/radio_group_controls"
-    android:orientation="horizontal"
     android:layout_width="wrap_content"
     android:layout_height="?android:attr/actionBarSize"
     android:layout_gravity="end"
-    android:gravity="center_vertical"
-    tools:showIn="@layout/activity_main"
     android:divider="@drawable/common_divider_large_horizontal"
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:showDividers="beginning|middle|end"
-    >
+    tools:showIn="@layout/activity_main">
 
     <RadioButton
         android:id="@+id/radio_button_play_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:button="@drawable/selector_main_nav_play_list"
         android:background="?attr/selectableItemBackgroundBorderless"
+        android:button="@drawable/selector_main_nav_play_list"
         tools:button="@drawable/ic_main_nav_play_list_selected"
-        tools:checked="true"
-        />
+        tools:checked="true" />
 
 
     <RadioButton
         android:id="@+id/radio_button_music"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:button="@drawable/selector_main_nav_music"
         android:background="?attr/selectableItemBackgroundBorderless"
-        tools:button="@drawable/ic_main_nav_music"
-        />
+        android:button="@drawable/selector_main_nav_music"
+        tools:button="@drawable/ic_main_nav_music" />
 
     <RadioButton
         android:id="@+id/radio_button_local_files"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:button="@drawable/selector_main_nav_local_files"
         android:background="?attr/selectableItemBackgroundBorderless"
-        tools:button="@drawable/ic_main_nav_local_files"
-        />
+        android:button="@drawable/selector_main_nav_local_files"
+        tools:button="@drawable/ic_main_nav_local_files" />
 
     <RadioButton
         android:id="@+id/radio_button_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:button="@drawable/selector_main_nav_settings"
         android:background="?attr/selectableItemBackgroundBorderless"
-        tools:button="@drawable/ic_main_nav_settings"
-        />
+        android:button="@drawable/selector_main_nav_settings"
+        tools:button="@drawable/ic_main_nav_settings" />
+
+    <RadioButton
+        android:id="@+id/radio_button_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:button="@drawable/selector_main_nav_search"
+        tools:button="@drawable/ic_search" />
+
 </RadioGroup>
