--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
-        toolbar:title="@string/mp.app.name"
+        toolbar:title="@string/mp_app_name"
         toolbar:titleTextAppearance="@style/MP.Theme.TextAppearance.Light.Toolbar.Title">
 
         <include layout="@layout/layout_main_custom_toolbar" />
