--- a/app/src/main/res/layout/item_play_list_footer.xml
+++ b/app/src/main/res/layout/item_play_list_footer.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/mp.play_list.footer.add"
+                android:text="@string/mp_play_list_footer_add"
                 />
         </LinearLayout>
     </FrameLayout>
