--- a/app/src/main/res/menu/file_system_action_mode.xml
+++ b/app/src/main/res/menu/file_system_action_mode.xml
@@ -4,7 +4,7 @@
     >
     <item
         android:id="@+id/menu_item_done"
-        android:title="@string/mp.local_files.file_system.menu.done"
+        android:title="@string/mp_local_files_file_system_menu_done"
         android:icon="@drawable/ic_select_all_action_mode"
         app:showAsAction="always"
         />
