--- a/app/src/main/res/menu/music_action.xml
+++ b/app/src/main/res/menu/music_action.xml
@@ -2,10 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_item_add_to_play_list"
-        android:title="@string/mp.menu.add_to_play_list"
+        android:title="@string/mp_menu_add_to_play_list"
         />
     <item
         android:id="@+id/menu_item_delete"
-        android:title="@string/mp.menu.delete"
+        android:title="@string/mp_menu_delete"
         />
 </menu>
