add weibo login in settings.

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,17 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/mp_fragment_title_settings"
-        android:textColor="?attr/colorAccent"
-        android:textSize="24sp" />
-
     <Button
+        android:id="@+id/button_weibo_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/mp_fragment_setting_login"/>
+        android:text="@string/mp_fragment_setting_login"
+        android:textColor="?attr/colorAccent" />
 </RelativeLayout>
