--- a/app/src/main/res/menu/play_list_action.xml
+++ b/app/src/main/res/menu/play_list_action.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_item_play_now"
-        android:title="@string/mp_menu_play_now"
+        android:title="@string/menu_play_now"
         />
     <item
         android:id="@+id/menu_item_rename"
-        android:title="@string/mp_menu_rename"
+        android:title="@string/menu_rename"
         />
     <item
         android:id="@+id/menu_item_delete"
-        android:title="@string/mp_menu_delete"
+        android:title="@string/menu_delete"
         />
 </menu>
